--- a/code/index.html
+++ b/code/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Visit Öland</title>
     <link rel="stylesheet" href="./style.css" />
-    <!-- dont forget the meta tag for responsiveness -->
   </head>
   <body>
     <header>
@@ -16,12 +15,12 @@
             <li><a class="lank" href="./index.html">home</a></li>
             <li><a class="lank" href="./index.html">about</a></li>
             <li><a class="lank" href="mailto:sofia.gerdmar@gmail.com">contact</a></li>
-          </ul> 
-          <div class="hamburger-menu">
-            <div class="line"></div>
-            <div class="line"></div>
-            <div class="line"></div>
+          </ul>
         </div>
+        <div class="hamburger-menu">
+          <div class="line"></div>
+          <div class="line"></div>
+          <div class="line"></div>
         </div>        
       </nav>
     </header>
@@ -29,7 +28,7 @@
     <section class="big-news">
       <!-- The big news content -->
       <div><img class="panorama" src="./Images/IMG_1083.jpeg" alt="Picture of sunset"></div>
-    <h1>Öland – the island of sun and winds</h1>
+    <h1>Öland – the Island of Sun and Winds</h1>
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam hendrerit nisl et neque cursus, vel scelerisque lacus mattis. Sed rhoncus tempor interdum. Fusce mattis sem eget nisi lacinia condimentum. Mauris magna purus, gravida non tincidunt in, facilisis eu metus. Nulla at enim dictum, pretium arcu et, ultricies turpis. Ut metus eros, vehicula at leo eget, volutpat laoreet turpis. Morbi ut mollis mi.</p>
     <p>Donec sollicitudin neque tortor, eu auctor odio rhoncus et. In hac habitasse platea dictumst. Vestibulum molestie neque ligula, sit amet sodales dolor finibus quis. Nam nec dolor vehicula, gravida quam id, condimentum quam. Cras scelerisque sem eget libero dictum pharetra. Nunc sit amet turpis nisl. Sed volutpat tortor vitae dui tincidunt, in ullamcorper velit vulputate. Vestibulum ornare id lectus eget dapibus.</p>
     </section>
@@ -57,5 +56,6 @@
       <h3>Created by Sofia Gerdmar, Technigo Web Development Bootcamp Spring '23</h3>
     </footer>
     </section>
+    
 </body>
 </html>
