added mobile design

--- a/code/index.html
+++ b/code/index.html
@@ -1,23 +1,124 @@
 <!DOCTYPE html>
+<html lang="en">
 <html>
   <head>
     <meta charset="utf-8" />
-    <!-- Change the title below -->
-    <title>News Site</title>
+    <title>Feel Good News</title>
     <link rel="stylesheet" href="./style.css" />
-    <!-- dont forget the meta tag for responsiveness -->
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/iconoir-icons/iconoir@main/css/iconoir.css">
+    <link href='https://fonts.googleapis.com/css?family=Source Sans Pro' rel='stylesheet'>
+    <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
+    <link href='https://fonts.googleapis.com/css?family=Roboto Mono' rel='stylesheet'>
   </head>
   <body>
-    <header>
-      <!-- Some kind of logo and navbar -->
-    </header>
-
-    <section class="big-news">
-      <!-- The big news content -->
-    </section>
-
-    <section class="">
-      <!-- The other news  -->
-    </section>
+    <a name="top"></a>
+    <div class="grid-container">
+      <div class="ticker grid-item"><div class="ticker-animation">
+        <div class="ticker-item">&#128154;Welcome to Feel Good News&#128154;</div>
+        <div class="ticker-item">&#128522;News that make you feel good&#128522;</div>
+      </div></div>
+      <header class="grid-item">
+        <div class="flex-container title-logo">
+          <h1 class="flex-item title">Feel Good News</h1>
+          <i class="flex-item iconoir-sun-light">
+          </i>
+        </div>
+      </header>
+      <nav class="grid-item">
+          <div class="icon-bar">
+                <a href="#">
+                <i class="iconoir-home"></i>
+                </a>
+                <a href="#">
+                  <i class="iconoir-search"></i>
+                </a>
+                <a href="#">
+                  <i class="iconoir-facebook"></i>
+                </a>
+                <a href="#">
+                  <i class="iconoir-instagram"></i>
+                </a>
+                <a href="#">
+                  <i class="iconoir-mail"></i>
+                  </a>
+      </nav>
+      <main class="grid-item">
+        <div class="big-news-container">
+          <div class="big-news">
+            <h4><em>This week's Feel Good Feature:</em></h4>
+            <img class="big-news-image" src="./pexels-markus-spiske-2990644.jpg" alt="An image of a sign that says 'Fight today for a better tomorrow'"/>
+            <h2>Epic climate agreement signed&#128293;</h2>
+            <p>In case you missed it: COP15 came to a happy end when negotiators reached a historic deal just before Christmas last year, at a U.N. biodiversity conference in Montreal. It is a huge landmark for those fighting to protecting our lands and oceans. 
+              "We can truly be proud" said Chinese Environment Minister Huang Runqiu, “We have in our hands a package which I think can guide us as we all work together to halt and reverse biodiversity loss and put biodiversity on the path to recovery for the benefit of all people in the world”.</p>
+              <p>Want to know more? &#128064; Click the link below for details.</p>
+              <button>
+                <a href="https://abcnews.go.com/International/wireStory/historic-biodiversity-agreement-reached-conference-95528486">Go to <strong>ABC News</strong></a>
+              </button>
+          </div>
+        </div>
+      </main>
+      <content>
+        <div class="news-card">
+          <img class="news-card-image" src="./pexels-mwabonje-2033447.jpg" alt="Picture of a man holding a phone and laughing."/>
+          <h3>Tired of keeping a straight face?</h3>
+          <p>We post weekly compilations of our favorite memes that will (hopefully) make you giggle, crack up and <em>maybe even</em> cackle so loud the neighbors can hear you.</p>
+          <p>If you want to, you can
+            <a href="https://www.instagram.com">vote on our Instagram</a> which meme really hit the spot <strong>for you </strong>this week.</p>
+            <p>Click the link below to check out our freshest picks.</p> 
+            <button>
+              <a href="https://www.instagram.com/p/Cn7RrOgOoCM/"><italic>Go to </italic><strong>Instagram</strong></a>
+            </button>
+        </div>
+        <div class="news-card">
+          <img class="news-card-image" src="./pexels-jeremy-bishop-3464799.jpg" alt="Picture of a burning newspaper."/>
+          <h3>Can we change the world?</h3>
+          <p>Everything can feel so hopeless sometimes. But philosophical research program Effective Altruism says that it is not impossible; actually, we have never had as much power (and money) to change things for the better, than now.</p>
+          <p>Freeing 100 million 
+            <a href="https://www.youtube.com/shorts/XLcVqprnSbo?app=desktop&feature=share&cbrd=1"><strong>hens</strong></a> from cruel farming methods?</p>
+            <p>Making sure that new artifical intelligence companies benefit humanity rather than posing unacceptable risks?</p>
+            <p>Distributing enough malaria nets to save approximately 150 000 lives?</p>
+            <p><strong>Yup, all of this was made possible through Effective Altruism.</strong></p>
+            <p>Want to know how?</p>
+            <p>Click the link below to check out their website.</p>
+          <button>
+            <a href="https://www.effectivealtruism.org/"><strong>Effective Altruism: </strong>What it is, what it is not and what it could be.</a>
+          </button>
+        </div>
+        <div class="news-card">
+          <img class="news-card-image" src="./pexels-andrea-piacquadio-3766223.jpg" alt="Woman dancing with headphones on."/>
+          <h3>Music has the power to change moods</h3>
+          <p>Stressed, depressed or anxious? The right type of music can help you calm down, deal with emotions and counteract the blues. <em>It's true!</em></p> 
+          <p>Curious how it works? This article has summarized all the facts for you, and will most definitely teach you something you did not know about music.</p>
+          <p>Click the link below to read it.</p>
+          <button>
+            <a href="https://www.healthline.com/health/benefits-of-music"><italic>Go to </italic><strong>Healthline</strong></a> 
+          </button>
+        </div>
+        <div class="news-card">
+          <img class="news-card-image" src="./pexels-cottonbro-studio-5077069.jpg" alt="Picture of a person using Spotify on a smartphone."/>
+          <h3>Feel Good News playlist just released</h3>
+          <p>Inspired by our most recent article on the power of music, we have created our own Feel Good News playlist comprised of 14 songs that keep <strong>us</strong> smiling.</p>
+          <p>Click the link below to give it a listen, and let us know what <strong>your</strong>go-to, feel-good tunes are!</p>
+          <button>
+            <a href="https://open.spotify.com/playlist/39m6a78QOSMF6PxgH4x3Xk?si=9b2c8141442947ce"><italic>Go to </italic><strong>Spotify</strong></a>
+          </button>
+      </content>
+      <footer>
+        <div class="footer">
+          <h3>Enjoy Feel Good News?</h3>
+          <p>Subscribe to our newsletter to receive weekly updates and good vibes directly to your inbox.</p>
+          <p>You can unsubscribe at any time. Learn more about it within our privacy 
+            <a href="#">Policy page.</a>
+          </p>
+          <a href="#">
+            <button class="button-subscribe">&#127803;Subscribe&#127803;</button>
+          </a>
+          
+          <p><a href="#top">Back to top</a></p>
+      </div>
+    </footer>
+    </div>
   </body>
 </html>
