added text and style

--- a/code/index.html
+++ b/code/index.html
@@ -3,21 +3,47 @@
   <head>
     <meta charset="utf-8" />
     <!-- Change the title below -->
-    <title>News Site</title>
+    <title>Antiqes&Cottages</title>
     <link rel="stylesheet" href="./style.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- dont forget the meta tag for responsiveness -->
   </head>
+
+
+
   <body>
     <header>
+
       <!-- Some kind of logo and navbar -->
+      <h1 class="header"><img src="logga.gif">Antiqes&Cottages</h1>
     </header>
 
-    <section class="big-news">
+    <section>
+    <div class="news">
+
+      <div><h3>News</h3></div>
+      <div><p>This week we have some exiting news<br> 
+        about a treasure just found and<br>
+      we will meet a swedish coupple<br>
+    who just bought a cute cottage  </p></div>
+    </div>
       <!-- The big news content -->
     </section>
 
-    <section class="">
+    <section>
+
+      <div class="flex-container">
+
+        <div>What's up</div>
+        <div>News</div>
+        <div>Limited</div>
+        <div>Visiting</div>
+      </div>
       <!-- The other news  -->
     </section>
+    
+   
   </body>
+  
 </html>
+
