Changed flex-direction of big article

--- a/code/index.html
+++ b/code/index.html
@@ -34,7 +34,7 @@
       </div>
 
       <div class="grid-item big-grid-item flex-parent-big-article">
-        <div class="flex-child Trump">
+        <div class="flex-child trump">
           <img class="big-article-picture" src="trump_pyongyang.jpg" />
         </div>
         <div class="flex-child big-article-text">
