--- a/code/index.html
+++ b/code/index.html
@@ -35,7 +35,7 @@
 
       <div class="grid-item big-grid-item flex-parent-big-article">
         <div class="flex-child trump">
-          <img class="big-article-picture" src="trump_pyongyang.jpg" />
+          <img class="big-article-image" src="trump_pyongyang.jpg" />
         </div>
         <div class="flex-child big-article-text">
           <h3>
