--- a/code/index.html
+++ b/code/index.html
@@ -42,7 +42,7 @@
             Former President Trump Honored with Golden Statue in Pyongyang,
             North Korea
           </h3>
-          <p class="flex-child big-article-text-desktop">
+          <p>
             PYONGYANG, NORTH KOREA — In a surprise move, the North Korean
             government unveiled a statue of former President of the United
             States, Donald Trump, in the center of Pyongyang. The statue, which
@@ -52,9 +52,9 @@
             was attended by North Korean leader Kim Jong-un, who praised
             President Trump for his efforts to bring peace and stability to the
             Korean Peninsula and for improving relations between the two
-            countries during his time as President.<br />
-            <br />
-
+            countries during his time as President.
+          </p>
+          <p class="flex-child big-article-text-desktop">
             The unveiling of the statue was met with mixed reactions. Some North
             Koreans praised the government for honoring a former US leader,
             while others criticized the decision, citing the historically
