did some cleaning up in the code

--- a/code/index.html
+++ b/code/index.html
@@ -36,24 +36,24 @@
             <div class="big-news-article"> 
               <h2>Frog arrested for speeding</h2>
               <p> <b>A vicious frog was caught speeding this afternoon. Snail mother of four is furious: "We could have got killed"</b> </p>
-              <p> It was a normal afternoon in the small town Froskeby when the speeding had the locals raising eyebrows. The driver claims someone must have glued his foot to the gas pedal. The police are now investigating who might have done this. </p>
+              <p> It was a normal afternoon in the small town Froskeby when the dangerous speeding incident had the locals raising eyebrows. The driver claims someone must have glued his foot to the gas pedal. The police are now investigating who might have done this. </p>
               <p> Snail mother of four: - "I don't believe a word the driver is saying! I didn't see any foot or any glue! He could have killed our children or crushed our house!" </p>
             </div> 
           
       </section>
-
     <section class="other-news-parent">
+      <!-- The other news  -->
       <div class="flex-child other-news one">
         <img src="./bulldog.jpeg" alt="bulldog" >
           <h3>Harold just graduated from Harvard</h3>
       </div>
         <div class="flex-child other-news two" >
-        <div><img src="./chilldog.jpeg" alt="dog chilling" > </div>
-        <div> <h3>Lola thinks 'Netflix and chill' is overrated</h3></div>
+        <img src="./chilldog.jpeg" alt="dog chilling" > 
+        <h3>Lola thinks 'Netflix and chill' is overrated</h3>
       </div>
       <div class="flex-child other-news three" >
         <img src="./dogmassage.jpeg" alt="dog massages other dog">
-        <h3>Connie 'has your back'</h3>
+        <h3>Connie 'has Ginny's back'</h3>
       </div>
       <div class="flex-child other-news four">
         <img src="./paca.jpeg" alt="alpaca">
@@ -74,11 +74,7 @@
       <div class="flex-child other-news eight">
         <img src="./bird.jpeg" alt="bird">
         <h3>Anita almost hit a tree - Now she wants to warn others</h3>
-      </div>
-
-    </div>
-      
-      <!-- The other news  -->
+      </div> 
     </section>
   </body>
 </html>
