Fix responsivity for mobile on News & Reviews

--- a/code/newsreviews.html
+++ b/code/newsreviews.html
@@ -24,27 +24,34 @@
   <body>
     <header>
       <nav class="navbar">
-        <a href="index.html"
-          ><img
-            src="img/a_cat.jpg"
-            alt="logo"
-            title="Logo, black cat"
-            class="logo-nav"
-        /></a>
-        <div>
-          <ul>
-            <li>
-              <a aria-current="page" href="index.html" title="Home">Home</a>
-            </li>
-            <li>
-              <a class="active" href="./newsreviews.html" title="News & Revies"
-                >News & Reviews</a
-              >
-            </li>
-            <li>
-              <a href="mostwanted.html" title="Most Wanted">Most Wanted</a>
-            </li>
-          </ul>
+        <div class="container">
+          <a href="index.html"
+            ><img
+              src="img/a_cat.jpg"
+              alt="logo"
+              title="Logo, black cat"
+              class="logo-nav"
+          /></a>
+          <div class="container">
+            <div>
+              <ul>
+                <li>
+                  <a aria-current="page" href="index.html" title="Home">Home</a>
+                </li>
+                <li>
+                  <a
+                    class="active"
+                    href="newsreviews.html"
+                    title="News & Reviews"
+                    >News & Reviews</a
+                  >
+                </li>
+                <li>
+                  <a href="mostwanted.html" title="Most Wanted">Most Wanted</a>
+                </li>
+              </ul>
+            </div>
+          </div>
         </div>
       </nav>
     </header>
@@ -113,10 +120,10 @@
                 <video controls class="video-big-news-one">
                   <source src="video/catnip.mp4" type="video/mp4" />
                 </video>
-                <figcaption>
-                  <em>Video:</em><em> Smirre Archives</em><em>Music:</em
-                  ><em>Bensound - Royalty Free Music for Creators</em>
-                  <div class="primary-link">
+                <figcaption class="video-big-news-two-figcaption">
+                  <div>
+                    <em>Video: </em><em>Smirre Archives</em> <em>Music: </em
+                    ><em>Bensound - Royalty Free Music for Creators</em>
                     <a
                       href="https://www.bensound.com"
                       target="_blank"
@@ -277,9 +284,7 @@
                 <div class="other-news-div">
                   <div class="card">
                     <div>
-                      <p class="review">
-                        <q>Why would I want to jump into water?</q>
-                      </p>
+                      <p class="review"><q>Meh</q></p>
                       <div class="icon-div">
                         <i class="material-icons pets" aria-hidden="true"
                           >pets</i
