Fix responsivity for mobile

--- a/code/newsreviews.html
+++ b/code/newsreviews.html
@@ -124,12 +124,14 @@
                   <div>
                     <em>Video: </em><em>Smirre Archives</em> <em>Music: </em
                     ><em>Bensound - Royalty Free Music for Creators</em>
-                    <a
-                      href="https://www.bensound.com"
-                      target="_blank"
-                      rel="noopener noreferrer"
-                      >Take Me to Bensound</a
-                    >
+                    <div class="figcaption-link">
+                      <a
+                        href="https://www.bensound.com"
+                        target="_blank"
+                        rel="noopener noreferrer"
+                        >Take Me to Bensound</a
+                      >
+                    </div>
                   </div>
                 </figcaption>
               </figure>
