requested changes fixed

--- a/code/index.html
+++ b/code/index.html
@@ -79,7 +79,7 @@
   </div>
 
   <footer>
-    © 2023 | TBL AB @ The Code Times | Contact: tbrannberglendt@gmail.com 
-  </footer>
+    <p>© 2023 | TBL AB @ The Code Times | Contact: tbrannberglendt@gmail.com</p>
+    </footer>
   </body>
 </html>
