--- a/code/html-css/index.html
+++ b/code/html-css/index.html
@@ -2,71 +2,132 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Dog parent weekly</title>
-    <link rel="stylesheet" href="/project-news-site/code/html-css/style.css">
-    <script src="https://kit.fontawesome.com/b6916095c2.js" crossorigin="anonymous"></script>
-
+    <link rel="stylesheet" href="/project-news-site/code/html-css/style.css" />
+    <script
+      src="https://kit.fontawesome.com/b6916095c2.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
-<body>
-
+  <body>
     <!-- Hero section -->
-  
-  <div class="container-hero">
-      <img class="logo" src="/project-news-site/code/logo.svg" alt="Technigo logo">
 
-    <!---Hamburger meny (only for mobile)-->
+    <div class="container-hero">
+      <img
+        class="logo"
+        src="/project-news-site/code/logo.svg"
+        alt="Technigo logo"
+      />
 
       <h1>Dog Parent Weekly</h1>
-      <div class="hamburger"></div>
-      <div class="hamburger"></div>
-      <div class="hamburger"></div> 
-      
-  <div class="menu">MENU</div>
-    <nav>
+      <!---Hamburger meny (only for mobile)-->
+      <div class="hamburger-container">
+        <div class="menu">MENU</div>
+        <div class="hamburger"></div>
+        <div class="hamburger"></div>
+        <div class="hamburger"></div>
+      </div>
+      <nav>
         <ul class="navbar">
-            <li> <a href="#">HOME</a></li>
-            <li> <a href="#">CONTACT</a></li>
-            <li> <a href="#">CONTACT</a></li>
-         </ul>
+          <li><a href="#">HOME</a></li>
+          <li><a href="#">CONTACT</a></li>
+          <li><a href="#">CONTACT</a></li>
+        </ul>
       </nav>
-  </div> 
+    </div>
 
-<!--- End of hero section -->
+    <!--- End of hero section -->
 
-<!-- The big news content -->
-<main>
+    <!-- The big news content -->
+    <main>
+      <section class="big-mama-news">
+        <img
+          src="/project-news-site/code/unicorndog.jpg"
+          class="big-news-img"
+          alt="dog with a unicorn outfit"
+        />
 
-  <section class="big-mama-news">
-        <img src="/project-news-site/code/unicorndog.jpg" class="big-news-img" alt="dog with a unicorn outfit">
-        
-        <p class="big-news-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi, optio porro sint ea aliquid vitae eos doloribus ut consectetur, enim vel, dolores molestias pariatur distinctio a. Aut deleniti tenetur dolor?</p>
-  </section>
-</main>
+        <p class="big-news-text">
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi, optio
+          porro sint ea aliquid vitae eos doloribus ut consectetur, enim vel,
+          dolores molestias pariatur distinctio a. Aut deleniti tenetur dolor?
+        </p>
+      </section>
+    </main>
     <section class="small-mama-news-container">
-      <div><img src="/project-news-site/code/blackboston.jpg" class="small-news-gridkid" alt="">
+      <div>
+        <img
+          src="/project-news-site/code/blackboston.jpg"
+          class="small-news-gridkid"
+          alt=""
+        />
       </div>
-      <div class="small-mama-news"> <img src="/project-news-site/code/blinkingpuppy.jpg" class="small-news-gridkid" alt="labrador puppy">
-        </div>
-      <div class="small-mama-news"> <img src="/project-news-site/code/dogbomberjacket.jpg" class="small-news-gridkid" alt="amstaff in bomberjacket">
-        </div>
-      <div class="small-mama-news"> <img src="/project-news-site/code/dogwithhat.jpg" class="small-news-gridkid" alt="dog with a yellow hat">
-        </div>
-      <div class="small-mama-news"> <img src="/project-news-site/code/dogfood.jpg" class="small-news-gridkid" alt="dog eating veggies">
-        </div>
-      <div class="small-mama-news"> <img src="/project-news-site/code/pexels-amy-mccormack-5463180.jpg" class="small-news-gridkid" alt="puppies laying on green grass in a row"> 
+      <div class="small-mama-news">
+        <img
+          src="/project-news-site/code/blinkingpuppy.jpg"
+          class="small-news-gridkid"
+          alt="labrador puppy"
+        />
+      </div>
+      <div class="small-mama-news">
+        <img
+          src="/project-news-site/code/dogbomberjacket.jpg"
+          class="small-news-gridkid"
+          alt="amstaff in bomberjacket"
+        />
+      </div>
+      <div class="small-mama-news">
+        <img
+          src="/project-news-site/code/dogwithhat.jpg"
+          class="small-news-gridkid"
+          alt="dog with a yellow hat"
+        />
+      </div>
+      <div class="small-mama-news">
+        <img
+          src="/project-news-site/code/dogfood.jpg"
+          class="small-news-gridkid"
+          alt="dog eating veggies"
+        />
+      </div>
+      <div class="small-mama-news">
+        <img
+          src="/project-news-site/code/pexels-amy-mccormack-5463180.jpg"
+          class="small-news-gridkid"
+          alt="puppies laying on green grass in a row"
+        />
       </div>
 
-      <div class="small-mama-news"> <img src="/project-news-site/code/pexels-lumn-406014.jpg" class="small-news-gridkid" alt="dog looking up">
-        </div>
-      <div class="small-mama-news grid-item"> <img src="/project-news-site/code/taxmedtröja.jpg" class="small-news-gridkid" alt="small dog in a knitted shirt">
-          </div>
-    <div class="small-mama-news grid-item"> <img src="/project-news-site/code/unicorndog.jpg" class="small-news-gridkid" alt="dog in a unicorn outfit">
-          </div>
-    <div class="small-mama-news"> <img src="/project-news-site/code/winteriscoming.jpg" class="small-news-gridkid" alt="dog in the winter">
+      <div class="small-mama-news">
+        <img
+          src="/project-news-site/code/pexels-lumn-406014.jpg"
+          class="small-news-gridkid"
+          alt="dog looking up"
+        />
+      </div>
+      <div class="small-mama-news grid-item">
+        <img
+          src="/project-news-site/code/taxmedtröja.jpg"
+          class="small-news-gridkid"
+          alt="small dog in a knitted shirt"
+        />
+      </div>
+      <div class="small-mama-news grid-item">
+        <img
+          src="/project-news-site/code/unicorndog.jpg"
+          class="small-news-gridkid"
+          alt="dog in a unicorn outfit"
+        />
+      </div>
+      <div class="small-mama-news">
+        <img
+          src="/project-news-site/code/winteriscoming.jpg"
+          class="small-news-gridkid"
+          alt="dog in the winter"
+        />
       </div>
     </section>
-
   </body>
 </html>
