changed hero properties for more responsiveness

--- a/code/html-css/index.html
+++ b/code/html-css/index.html
@@ -15,13 +15,15 @@
     <!-- Hero section -->
 
     <div class="container-hero">
-      <img
-        class="logo"
-        src="/project-news-site/code/logo.svg"
-        alt="Technigo logo"
-      />
+      <div class="herotext-logo">
+        <img
+          class="logo"
+          src="/project-news-site/code/logo.svg"
+          alt="Technigo logo"
+        />
 
-      <h1>Dog Parent Weekly</h1>
+        <h1>Dog Parent Weekly</h1>
+      </div>
       <!---Hamburger meny (only for mobile)-->
       <div class="hamburger-container">
         <div class="menu">MENU</div>
