--- a/index.html
+++ b/index.html
@@ -1,6 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <html lang="en">
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Project News Site</title>
+    </head>
+    <body>
+        
+    </body>
+    </html>
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,800" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="style.css">
     <title>My first web page</title>
@@ -8,6 +18,7 @@
 <body>
     <div class="header">
         <div class="inner-header">
+
             <div class="logo-container">
                 <h1>GOOD<span>NEWS!</span></h1>
             </div>
@@ -17,8 +28,11 @@
                 <a href=""><li>About</li></a>
                 <a href=""><li>Contact</li></a>
             </ul>
-        </div>
+
+        </div>    
+
     </div>
+
     <div class="container">
         <div class="box1">
             <div class="box-image bg-1"></div>
