--- a/code/index.html
+++ b/code/index.html
@@ -6,8 +6,7 @@
 
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Design Time 📰 Recent trends in design ✨ </title>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <title>Design Time 📰 Trends in design ✨ </title>
     <link rel="preconnect" href="https://fonts.googleapis.com"> 
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
