finished, addes css styling and got grid and flex to co-operate better

--- a/code/index.html
+++ b/code/index.html
@@ -30,55 +30,55 @@
         </header>
 
         <div class="top-box">
-          <img src="knitting.jpg" alt="knitting">
+          <img src="knitting.jpg">
         </div>
       </section>
 
       <section class="boxes">
         <div class="box">
-          <img src="Manne.jpg" alt="books" class="books">
+          <a href="#"><img src="Manne.jpg" alt="dog"></a>
           <h3>Article</h3>
           <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eum impedit quidem nam praesentium soluta harum minima sed cumque unde aut natus, rem provident asperiores. Tenetur tempora iste ducimus enim maiores.
           </p>
         </div>
         <div class="box">
-          <img src="books.jpg" alt="knitting" class="knittig">
+          <a href="#"><img src="books.jpg" alt="books"></a>
           <h3>Article</h3>
           <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eum impedit quidem nam praesentium soluta harum minima sed cumque unde aut natus, rem provident asperiores. Tenetur tempora iste ducimus enim maiores.
           </p>
         </div>
         <div class="box">
-          <img src="pasta.jpg" alt="pasta" class="pasta">
+          <a href="#"><img src="pasta.jpg" alt="pasta"></a>
           <h3>Article</h3>
           <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eum impedit quidem nam praesentium soluta harum minima sed cumque unde aut natus, rem provident asperiores. Tenetur tempora iste ducimus enim maiores.
           </p>
         </div>
         <div class="box">
-          <img src="plants.jpg" alt="plants" class="plants">
+          <a href="#"><img src="plants.jpg" alt="plants"></a>
           <h3>Article</h3>
           <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eum impedit quidem nam praesentium soluta harum minima sed cumque unde aut natus, rem provident asperiores. Tenetur tempora iste ducimus enim maiores.
           </p>
         </div>
         <div class="box">
-          <img src="books.jpg" alt="books" class="books">
+          <a href="#"><img src="books.jpg" alt="books"></a>
           <h3>Article</h3>
           <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eum impedit quidem nam praesentium soluta harum minima sed cumque unde aut natus, rem provident asperiores. Tenetur tempora iste ducimus enim maiores.
           </p>
         </div>
         <div class="box">
-          <img src="knitting.jpg" alt="books" class="books">
+          <a href="#"><img src="knitting.jpg" alt="knitting"></a>
           <h3>Article</h3>
           <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eum impedit quidem nam praesentium soluta harum minima sed cumque unde aut natus, rem provident asperiores. Tenetur tempora iste ducimus enim maiores.
           </p>
         </div>
         <div class="box">
-          <img src="pasta.jpg" alt="books" class="books">
+          <a href="#"><img src="pasta.jpg" alt="pasta"></a>
           <h3>Article</h3>
           <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eum impedit quidem nam praesentium soluta harum minima sed cumque unde aut natus, rem provident asperiores. Tenetur tempora iste ducimus enim maiores.
           </p>
         </div>
         <div class="box">
-          <img src="Manne.jpg" alt="books" class="books">
+          <a href="#"><img src="Manne.jpg" alt="dog"></a>
           <h3>Article</h3>
           <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eum impedit quidem nam praesentium soluta harum minima sed cumque unde aut natus, rem provident asperiores. Tenetur tempora iste ducimus enim maiores.
           </p>
