edited content of the title

--- a/code/index.html
+++ b/code/index.html
@@ -6,7 +6,7 @@
 
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Design Time 📰 Trends in design ✨ </title>
+    <title>Design Time 📰 Trends in design 💫 </title>
     <link rel="preconnect" href="https://fonts.googleapis.com"> 
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
@@ -18,7 +18,7 @@
   <body>
 
     <header class="header">
-      <img src="images/logo.jpg" alt="Logo" class="logo-pic">
+      <img src="images/mini.jpg" alt="Logo" class="logo-pic">
       <a href="#" class="logo"> 
           <h6>
           Trends in design
