worked on hero section for mobile and tablet

--- a/code/html-css/index.html
+++ b/code/html-css/index.html
@@ -15,15 +15,12 @@
     <!-- Hero section -->
 
     <div class="container-hero">
-      <div class="herotext-logo">
         <img
           class="logo"
-          src="/project-news-site/code/logo.svg"
-          alt="Technigo logo"
-        />
-
-        <h1>Dog Parent Weekly</h1>
-      </div>
+          src="/project-news-site/code/Dog walking_Outline.png"
+          alt="Technigo logo">
+        <h1 class="herotext">Dog Parent Weekly</h1>
+    </div>
       <!---Hamburger meny (only for mobile)-->
       <div class="hamburger-container">
         <div class="menu">MENU</div>
@@ -31,6 +28,7 @@
         <div class="hamburger"></div>
         <div class="hamburger"></div>
       </div>
+      <!--  END OF HAMBURGER SECTION  -->
       <nav>
         <ul class="navbar">
           <li><a href="#">HOME</a></li>
@@ -46,7 +44,7 @@
     <main>
       <section class="big-mama-news">
         <img
-          src="/project-news-site/code/unicorndog.jpg"
+          src="/project-news-site/code/heroimage.jpg"
           class="big-news-img"
           alt="dog with a unicorn outfit"
         />
