--- a/code/index.html
+++ b/code/index.html
@@ -5,20 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Dog parent weekly</title>
-    <link rel="stylesheet" href="/project-news-site/code/html-css/style.css" />
+    <link rel="stylesheet" href="/project-news-site/code/style.css" />
     <script
       src="https://kit.fontawesome.com/b6916095c2.js"
-      crossorigin="anonymous"
-    ></script>
+      crossorigin="anonymous"></script>
   </head>
   <body>
     <!-- Hero section -->
 
     <div class="container-hero">
-        <img
-          class="logo"
-          src="/project-news-site/code/Dog walking_Outline.png"
+        <div class="logo">
+          <img src="/project-news-site/code/Dog walking_Outline.png"
           alt="Technigo logo">
+        </div>
         <h1 class="herotext">Dog Parent Weekly</h1>
     </div>
       <!---Hamburger meny (only for mobile)-->
