link fonts to HTML

--- a/code/index.html
+++ b/code/index.html
@@ -6,15 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Fake News Daily</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Climate+Crisis&family=Roboto:wght@300&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <section class="grid-parent">
       <div class="grid-item flex-parent-header header-container">
         <div class="header-title">
           <h1 class="no-margin">Fake News Daily</h1>
-          <h2 class="no-margin">
-            When real reporting just doesn't do it anymore.
-          </h2>
+          <h2>When real reporting just doesn't do it anymore.</h2>
         </div>
         <div class="nav-items nav-items-desktop">
           <a class="active" href="#home">HOME</a>
