redid entire structure

--- a/code/index.html
+++ b/code/index.html
@@ -9,8 +9,8 @@
   </head>
   <body>
     <header>
-      <nav class="header1">
-        <div class="logotype"><img src="./Images/Visit öland.png" alt="Logotype Visit Öland"></div>
+        <div class="logotype">
+          <img class="logo" src="./Images/Visit öland.png" alt="Logotype Visit Öland"></div>
         <div class="navbar">  
           <ul>
             <li><a class="lank" href="./index.html">home</a></li>
@@ -22,40 +22,41 @@
           <div class="line"></div>
           <div class="line"></div>
           <div class="line"></div>
-        </div>        
-      </nav>
+        </div>
     </header>
     <section class="main">    
-    <section class="big-news">
-      <!-- The big news content -->
-      <div><img class="panorama" src="./Images/IMG_1083.jpeg" alt="Picture of sunset"></div>
-    <h1>Öland – the Island of Sun and Winds</h1>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam hendrerit nisl et neque cursus, vel scelerisque lacus mattis. Sed rhoncus tempor interdum. Fusce mattis sem eget nisi lacinia condimentum. Mauris magna purus, gravida non tincidunt in, facilisis eu metus. Nulla at enim dictum, pretium arcu et, ultricies turpis. Ut metus eros, vehicula at leo eget, volutpat laoreet turpis. Morbi ut mollis mi.</p>
-    <p>Donec sollicitudin neque tortor, eu auctor odio rhoncus et. In hac habitasse platea dictumst. Vestibulum molestie neque ligula, sit amet sodales dolor finibus quis. Nam nec dolor vehicula, gravida quam id, condimentum quam. Cras scelerisque sem eget libero dictum pharetra. Nunc sit amet turpis nisl. Sed volutpat tortor vitae dui tincidunt, in ullamcorper velit vulputate. Vestibulum ornare id lectus eget dapibus.</p>
+      <section class="big-news">
+        <!-- The big news content -->
+        <div class="panorama-div">
+          <img class="panorama" src="./Images/IMG_1083.jpeg" alt="Picture of sunset"></div>
+        <div class="text-div">
+          <h1>Öland – the Island of Sun and Winds</h1>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam hendrerit nisl et neque cursus, vel scelerisque lacus mattis. Sed rhoncus tempor interdum. Fusce mattis sem eget nisi lacinia condimentum. Mauris magna purus, gravida non tincidunt in, facilisis eu metus. Nulla at enim dictum, pretium arcu et, ultricies turpis. Ut metus eros, vehicula at leo eget, volutpat laoreet turpis. Morbi ut mollis mi.</p>
+      </div>
     </section>
-    <section class="squares">
-      <!-- The other news  -->
-      <div class="small-news">
-        <h2>sightseeing</h2>
-        <a class="img-link" href="./index.html">
-        <img src="https://picsum.photos/id/442/200/200" alt="Picture of map"></a></div>
-      <div class="small-news">
-        <h2>dining</h2>
-        <a class="img-link" href="./index.html">
-        <img src="https://picsum.photos/id/30/200/200" alt="Picture of coffee cup"></a></div>
-      <div class="small-news">
-        <h2>beaches</h2>
-        <a class="img-link" href="./index.html">
-        <img src="https://picsum.photos/id/640/200/200" alt="Picture of beach"></a></div>
-      <div class="small-news">
-        <h2>nature</h2>
-        <a class="img-link" href="./index.html">
-        <img src="https://picsum.photos/id/112/200/200" alt="Picture of wheatfield"></a></div>
-    </section>
-    <footer>
-      <img class="logo" src="./Images/logo.svg" alt="Logo Technigo">
-      <h3>Created by Sofia Gerdmar, Technigo Web Development Bootcamp Spring '23</h3>
-    </footer>
+      <section class="squares">
+        <!-- The other news  -->
+        <div class="small-news">
+          <h2>sightseeing</h2>
+          <a class="img-link" href="./index.html">
+          <img src="https://picsum.photos/id/442/200/200" alt="Picture of map"></a></div>
+        <div class="small-news">
+          <h2>dining</h2>
+          <a class="img-link" href="./index.html">
+          <img src="https://picsum.photos/id/30/200/200" alt="Picture of coffee cup"></a></div>
+        <div class="small-news">
+          <h2>beaches</h2>
+          <a class="img-link" href="./index.html">
+          <img src="https://picsum.photos/id/640/200/200" alt="Picture of beach"></a></div>
+        <div class="small-news">
+          <h2>nature</h2>
+          <a class="img-link" href="./index.html">
+          <img src="https://picsum.photos/id/112/200/200" alt="Picture of wheatfield"></a></div>
+      </section>
+      <footer>
+        <img class="technigo-logo" src="./Images/logo.svg" alt="Logo Technigo">
+        <h3>Created by Sofia Gerdmar, Technigo Web Development Bootcamp Spring '23</h3>
+      </footer>
     </section>
     
 </body>
